// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NameValueTable Empty 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
  />
</div>
`;

exports[`Storyshots NameValueTable With Children 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
  >
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
    >
      MyName0
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
      >
        MyValue0
      </span>
    </dd>
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
    >
      MyName1
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
      >
        MyValue1
      </span>
    </dd>
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
    >
      MyName2
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
      >
        MyValue2
      </span>
    </dd>
  </dl>
</div>
`;

exports[`Storyshots NameValueTable With Hidden Last Children 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container makeStyles-table css-11lq3yg-MuiGrid-root"
  >
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
    >
      MyName0
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataCell css-r0umuq-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
      >
        MyValue0
      </span>
    </dd>
    <dt
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 makeStyles-metadataLast makeStyles-metadataNameCell css-1r6indk-MuiGrid-root"
    >
      MyName1
    </dt>
    <dd
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 makeStyles-metadataLast makeStyles-metadataCell css-r0umuq-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-body1 makeStyles-valueLabel css-1ezega9-MuiTypography-root"
      >
        MyValue1
      </span>
    </dd>
  </dl>
</div>
`;
